# ratbrain

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
notebooks/: EDA.ipynb
src/ratbrain/: __init__.py  __main__.py  run_mist.py
src/ratbrain/utils/: __init__.py  constants.py  helpers.py
